--- a/templates/register.html
+++ b/templates/register.html
@@ -61,9 +61,9 @@
 									<label for="demo-gender">Gender</label>
 									<select name="demo-gender" id="demo-gender" required>
 										<option value="">-</option>
-										<option value="1">Male</option>
-										<option value="1">Female</option>
-										<option value="1">Other</option>
+										<option value="Male">Male</option>
+										<option value="Female">Female</option>
+										<option value="Other">Other</option>
 									</select>
 								</div>
 								<div class="col-6 col-12-xsmall">
@@ -91,11 +91,14 @@
 				<section class="features">
 
 					<div class="row">
-						<div class="col-6 col-12-large" id="mycamera" name="webcam" type="files" class="image main"></div>
+						<div class="col-6 col-12-large" id="mycamera" class="image main"></div>
+						<div class="col-6 col-12-large"><p id="register_error"></p></div>
+						<input type="hidden" name="encoding" id="encoding">
+						<input type="hidden" name="register_image" id="register_image">
 						<script language="JavaScript">
 							Webcam.set({
 								width: 600,
-								height: 600,
+								height: 400,
 								image_format: 'jpeg',
 								jpeg_quality: 90
 							});
@@ -139,28 +142,17 @@
 
 					Webcam.upload(data_uri, '/register-image', function (code, text) {
 						console.log('Save successfully');
-						//console.log(text);
+						document.getElementById("encoding").value = text;
+						if(JSON.parse(text).length === 0) {
+							var error = "Error registering your face. Please Try again after refreshing the page";
+							document.getElementById("register_error").innerHTML = error;
+						}
+						document.getElementById("register_image").value = data_uri; 
+
+						console.log(text);
 					});
 				});
-				// var blob = function () {
-				// 	var dataURI = data_uri; //here data_uri assumed as global scope.
-				// 	// convert base64/URLEncoded data component to raw binary data held in a string
-				// 	var byteString;
-				// 	if (dataURI.split(',')[0].indexOf('base64') >= 0)
-				// 		byteString = atob(dataURI.split(',')[1]);
-				// 	else
-				// 		byteString = unescape(dataURI.split(',')[1]);
-
-				// 	// separate out the mime component
-				// 	var mimeString = dataURI.split(',')[0].split(':')[1].split(';')[0];
-				// 	// write the bytes of the string to a typed array
-				// 	var ia = new Uint8Array(byteString.length);
-				// 	for (var i = 0; i < byteString.length; i++) {
-				// 		ia[i] = byteString.charCodeAt(i);
-				// 	}
-				// 	//returning new image as blob object.
-				// 	return new Blob([ia], { type: mimeString });
-				// }();
+				
 			}
 
 		</script>
