--- a/templates/verify.html
+++ b/templates/verify.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>M-GAP | Register</title>
+	<title>M-GAP | Verify</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,10 +53,12 @@
 								<div class="col-12">
 									<label for="demo-temp">Temperature in Fahrenheit</label>
 									<input type="text" name="demo-temp" id="demo-name" value="" required />
+									<input type="hidden" name='user-id' id='user-id' />
+									<input type="hidden" name='mask-detected' id='mask-detected' />
 								</div>
 
 							</div>
-							
+
 					</section>
 				</div>
 			</header>
@@ -72,7 +74,7 @@
 							<script language="JavaScript">
 								Webcam.set({
 									width: 600,
-									height: 600,
+									height: 400,
 									image_format: 'jpeg',
 									jpeg_quality: 90
 								});
@@ -82,7 +84,26 @@
 							<div class="col-6 col-12-large">
 								<ul class="actions stacked">
 									<li><a href="#" input type="button" id="hello1" class="button primary fit"
-											onClick="take_snapshot()">Take Snapshot</a></li>
+											onClick="take_snapshot()">Verify Identity</a></li>
+
+								</ul>
+
+							</div>
+							<div id="mask" class="image main"></div>
+							<script language="JavaScript">
+								Webcam.set({
+									width: 600,
+									height: 400,
+									image_format: 'jpeg',
+									jpeg_quality: 90
+								});
+								Webcam.attach('#mask');
+							</script>
+
+							<div class="col-6 col-12-large">
+								<ul class="actions stacked">
+									<li><a href="#" input type="button" id="hello1" class="button primary fit"
+											onClick="detect_mask()">Verify Mask</a></li>
 
 								</ul>
 
@@ -96,7 +117,7 @@
 		</section>
 		<style>
 			#hello1 {
-				margin-left: 100px;
+				margin-left: 70px;
 
 			}
 		</style>
@@ -110,16 +131,26 @@
 				// take snapshot and get image data
 				Webcam.snap(function (data_uri) {
 					// snap complete, image data is in 'data_uri'
-
-					Webcam.upload(data_uri, '/register-image?email={{ user_email }}&username={{ username }}', function (code, text) {
-						// Upload complete!
-						// 'code' will be the HTTP response code from the server, e.g. 200
-						// 'text' will be the raw response content
-						if (text == 'OK' && code == 200) {
-							window.location = 'https://dev-afg9s90u.us.auth0.com/continue?state={{ state }}'
-						}
+					document.getElementById('mycamera').innerHTML =
+					'<img src="' + data_uri + '"/>';
+					Webcam.upload(data_uri, '/verify-face', function (code, text) {
+						console.log('Face image sent successfully');
+						console.log(JSON.parse(text).user_id);
+						document.getElementById('user-id').value = JSON.parse(text).user_id;
+						
 					});
-
+				});
+			}
+			function detect_mask() {
+				// take snapshot and get image data
+				Webcam.snap(function (data_uri) {
+					// snap complete, image data is in 'data_uri'
+					document.getElementById('mask').innerHTML =
+					'<img src="' + data_uri + '"/>';
+					Webcam.upload(data_uri, '/verify-mask', function (code, text) {
+						console.log('Mask image sent successfully');
+						document.getElementById('mask-detected').value = JSON.parse(text).mask
+					});
 				});
 			}
 		</script>
