--- a/templates/nomask.html
+++ b/templates/nomask.html
@@ -41,7 +41,7 @@
         <section>
             <div class="wrapper">
                 <div class="inner">
-            <h3 class="major">{{person.name}} IS NOT CLEAR TO ENTER AND IS NOT REGISTERED BY M-GAP</h3>
+            <h3 class="major">THE PERSON IS NOT CLEAR TO ENTER AND IS NOT REGISTERED BY M-GAP</h3>
             <h4>MASK NOT DETECTED</h4>
             
 
