--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>M-GAP | Home</title>
+	<link rel="icon" type="image/png" href="/assets/images/favicon.png"/>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +18,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header" class="alt">
+		<header id="header">
 			<h1><a href="/">M-GAP</a></h1>
 			<nav>
 				<a href="#menu">MENU</a>
