--- a/templates/noface.html
+++ b/templates/noface.html
@@ -41,7 +41,7 @@
         <section>
             <div class="wrapper">
                 <div class="inner">
-            <h3 class="major">{{person.name}} IS CLEAR TO ENTER BUT IS NOT REGISTERED BY M-GAP</h3>
+            <h3 class="major">THE PERSON IS CLEAR TO ENTER BUT IS NOT REGISTERED BY M-GAP</h3>
             <h4>MASK DETECTED</h4>
             
 
